--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using Filmotech
 @using Filmotech.Shared
+@using Filmotech.Controllers
+@using Filmotech.Entities
+@using System.ComponentModel.DataAnnotations
+@using Blazorise
+@using Blazorise.Icons.FontAwesome
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Syncfusion.Blazor.DropDowns
